[package]
name = "prefect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prefect-macro = { version = "*", path = "../prefect-macro" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.56"

serde_json = "1.0"
parking_lot = "0.12"
tokio-util = { version = "0.7.3" }
pin-project = "1.0"
futures = "0.3"
tracing = { version = "0.1", features = ["max_level_trace"] }
libc = "0.2.0"
md5 = "0.7.0" 

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",  
    "serde"
]